Fix site header z-index

--- a/RockWeb/Themes/ACrossingExternalNoTracking/Styles/theme.less
+++ b/RockWeb/Themes/ACrossingExternalNoTracking/Styles/theme.less
@@ -357,7 +357,7 @@ h1:empty {
 }
 
 header.tcc-site-header {
-  z-index: 1000;
+  z-index: 10000;
 }
 
 header:not(.panel-heading) {
