--- a/RockWeb/Themes/Veritas/Styles/theme.less
+++ b/RockWeb/Themes/Veritas/Styles/theme.less
@@ -357,6 +357,10 @@ h1:empty {
   display: none;
 }
 
+header.tcc-site-header {
+  z-index: 10000;
+}
+
 header:not(.panel-heading) {
   background-color: @color-dark-teal;
   position: fixed;
